--- a/portal/locale/es/LC_MESSAGES/messages.po
+++ b/portal/locale/es/LC_MESSAGES/messages.po
@@ -1,4 +1,4 @@
-# French translations for PROJECT.
+# Spanish translations for PROJECT.
 # Copyright (C) 2019 ORGANIZATION
 # This file is distributed under the same license as the PROJECT project.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2019.
@@ -9,9 +9,9 @@ msgstr ""
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2022-10-28 17:55+0000\n"
 "PO-Revision-Date: 2023-09-07 23:59-0600\n"
-"Last-Translator: reg <rgaudin@gmail.com>\n"
-"Language-Team: fr <LL@li.org>\n"
-"Language: fr\n"
+"Last-Translator: Ark74 <ark@switnet.org>\n"
+"Language-Team: es <LL@li.org>\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
